@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v3.9.2.html">v3.9.2</a></td>
+      <td><a href="v3.9.3.html">v3.9.3</a></td>
     </tr>
     <tr>
       <th>Latest Development Release</th>
